--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
