--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.1.0",
-    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query": "^5.24.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.3",
     "axios": "^1.6.7",
@@ -26,17 +26,22 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
     "react-spinners": "^0.13.8",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^10.0.4",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -48,6 +53,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-router-hash-link": "^2.4.9",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
