--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "headlessui": "^0.0.0",
+    "joi": "^17.12.2",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.316.0",
     "match-sorter": "^6.3.4",
