--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vercel/analytics": "^1.1.3",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
