--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.316.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.0",
