--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
