--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
@@ -81,6 +82,7 @@
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-flatpickr": "^3.8.11",
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@types/react-toastify": "^4.1.0",
