--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-flatpickr": "^3.8.11",
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@types/react-toastify": "^4.1.0",
