--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.4",
