--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
@@ -88,6 +89,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-lazy-load-image-component": "^1.6.3",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
